--- a/memes.html
+++ b/memes.html
@@ -11,14 +11,26 @@
 	</head>
   
 	<body>
-        <nav>
-            <a href="#">Inicio</a>
-            <a href="#">Acerca de</a>
-            <a href="#">Noticias</a>
-            <a href="#">contacto</a>
-            <a href="#">login</a>
-        </nav>
-
+        <header>
+            <nav>
+                <a href="#">Inicio</a>
+                <a href="#">Acerca de</a>
+                <a href="#">Noticias</a>
+                <a href="#">contacto</a>
+                <a href="#">login</a>
+            </nav>
+            <section class="textos-header">
+                <h1>Memes</h1>
+                <h2>Los mejores memes jamas vistos</h2>
+            </section>
+           
+            <!--color de la ola-->
+            <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+                    style="height: 100%; width: 100%;">
+                    <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: #fff;"></path>
+                    </svg></div>
+        </header>
          <!--noticias-->
          <div class="container">
             <div class="row row-cols-3">
