--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <main>
          <!--noticias-->
         <div class="container">
+            <h3>Título de noticias</h3>
+            
             <div class="row row-cols-3">
               <div class="col">
                 <img src="https://i.ytimg.com/vi/eL2gxySwvZE/maxresdefault.jpg" alt="Basta!" style="width:350px;height:200px;">
