--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
       </div> 
 
          <!--Ultima hora-->
-        </section>
         <section class="portafolio">
             <div class="contenedor">
                 <h2 class="titulo">Ultima hora</h2>
@@ -95,35 +94,35 @@
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img1.jpg" alt="">
+                        <img src="img/foto 4.jpg" alt="">
                         <div class="hover-galeria">
                             <img src="img/icono1.png" alt="">
                             <p>VAMOS SAPEA!!</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img4.jpg" alt="">
+                        <img src="img/foto 5.jpg" alt="">
                         <div class="hover-galeria">
                             <img src="img/icono1.png" alt="">
                             <p>VAMOS SAPEA!!</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img5.jpg" alt="">
+                        <img src="img/foto 6.jpg" alt="">
                         <div class="hover-galeria">
                             <img src="img/icono1.png" alt="">
                             <p>VAMOS SAPEA!!</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img6.jpg" alt="">
+                        <img src="img/foto 7.jpg" alt="">
                         <div class="hover-galeria">
                             <img src="img/icono1.png" alt="">
                             <p>VAMOS SAPEA!!</p>
                         </div>
                     </div>
                     <div class="imagen-port">
-                        <img src="img/img7.jpg" alt="">
+                        <img src="img/foto 8.jpg" alt="">
                         <div class="hover-galeria">
                             <img src="img/icono1.png" alt="">
                             <p>VAMOS SAPEA!!</p>
