--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">Inicio</a>
-            <a href="#">Acerca de</a>
-            <a href="#">Noticias</a>
-            <a href="#">contacto</a>
-            <a href="./memes.html">memes</a>
+            <a href="index.html">Inicio</a>
+            <a href="login.html">login</a>
+            <a href="news.html">Noticias</a>
+            <a href="memes.html">memes</a>
         </nav>
         
         <section class="textos-header">
