--- a/news.html
+++ b/news.html
@@ -12,13 +12,13 @@
   
 	<body>
         <header>
-            <nav>
-                <a href="#">Inicio</a>
-                <a href="#">Acerca de</a>
-                <a href="#">Noticias</a>
-                <a href="#">contacto</a>
-                <a href="#">login</a>
-            </nav>
+        <nav>
+            <a href="./index.html">Inicio</a>
+            <a href="#">Acerca de</a>
+            <a href="#">Noticias</a>
+            <a href="#">contacto</a>
+            <a href="./memes.html">memes</a>
+        </nav>
             <section class="textos-header">
                 <h1>Noticias</h1>
                 <h2>Las mejores noticias del mundo del bum-bum</h2>
