--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
         <title>home</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
       
 	</head>
     
@@ -31,6 +31,16 @@
               </div>
             </div>
           </div> 
+    <footer>
+        <div class="contenedor-footer">
+            <div class="content-foo">
+            <div class="content-foo">
+                <h4><a href="contact.html">
+                    <button type="button" class="btn btn-info">Acerca de nosotros</button></a></h4>
+            </div>
+        </div>
+        <h2 class="titulo-final">&copy; secc: 002v </h2>
+    </footer>
 	</body>
 	
 </html>
