login terminado, ligeras modificaciones en iconos

--- a/news.html
+++ b/news.html
@@ -13,11 +13,10 @@
 	<body>
         <header>
         <nav>
-            <a href="./index.html">Inicio</a>
-            <a href="#">Acerca de</a>
-            <a href="#">Noticias</a>
-            <a href="#">contacto</a>
-            <a href="./memes.html">memes</a>
+            <a href="index.html">Inicio</a>
+            <a href="login.html">login</a>
+            <a href="news.html">Noticias</a>
+            <a href="memes.html">memes</a>
         </nav>
             <section class="textos-header">
                 <h1>Noticias</h1>
@@ -80,16 +79,16 @@
           </div>
         </aside>
  
-    <footer>
-        <div class="contenedor-footer">
-            <div class="content-foo">
-            <div class="content-foo">
-                <h4><a href="contact.html">
-                    <button type="button" class="btn btn-info">Acerca de nosotros</button></a></h4>
-            </div>
-        </div>
-        <h2 class="titulo-final">&copy; secc: 002v </h2>
-    </footer>
+          <footer>
+              <div class="contenedor-footer">
+                  <div class="content-foo">
+                  <div class="content-foo">
+                      <h4><a href="contact.html">
+                          <button type="button" class="btn btn-info">Acerca de nosotros</button></a></h4>
+                  </div>
+              </div>
+              <h2 class="titulo-final">&copy; secc: 002v </h2>
+          </footer>
 
     
       </body>
