--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <title>Contacto</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="img/alexcgdesign.png" type="image/x-icon">
+        <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
         <link rel="stylesheet" href="css/estilos.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
       
