se enlazan los 'leer mas' redirigiendo a news.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h3>¡Escándalo en los Oscars!</h3>
                 <p><i><font size="3">Will Smith sorprendió al mundo con un tacle que le propinó a Chris Rock en la máxima cita del cine mundial.</font></i></p>
                 <p><font size="2">El mundo del cine quedó impávido la noche del 27 de marzo, cuando un enfurecido Will Smith se levantó y golpeó en la cara al presentador Chris Rock tras burlarse de la condición médica de su esposa, Jada Pinkett Smith. Las reacciones y pormenores del momento, ¡Aquí!</font>
-                <p><a href="/index.html"><font size="2"><i>Leer más...</i></font></a></p>
+                <p><a href="news.html"><font size="2"><i>Leer más...</i></font></a></p>
             </div>
 
             <div class="col">
@@ -49,7 +49,7 @@
                 <h3>¡You shall not pass!</h3>
                 <p><i><font size="3">A 20 años del estreno de "El señor de los anillos"</font></i></p>
                 <p><font size="2">En el segundo decenio de esta joya absoluta del cine, entrevistamos al tremendo Peter Jackson y desmenuzamos por completo esta tetralogía dorada. Desde los lineamientos iniciales hasta la música que acompañó al filme, ¡no quedó cabo sin atar! </font-size></p>
-                <p><a href="/index.html"><font size="2"><i>Leer más...</i></font></a></p>
+                <p><a href="news.html"><font size="2"><i>Leer más...</i></font></a></p>
               </div>
               
               <div class="col">
@@ -57,7 +57,7 @@
                 <h3>The X Files: a 30 años de su estreno</h3>
                 <p><i><font size="3">La verdad sigue ahí afuera</font></i></p>
                 <p><font size="2">El 10 de septiembre de 1993 se estrenó en la televisión a color una de las series más icónicas y oscuras de los años 90. Su legado perdura hasta nuestros días con fieles seguidores a lo largo del planeta. Aquí te traemos algunos datos interesantes y una que otra cosa que de seguro no sabías.  </font-size></p>
-                <p><a href="/index.html"><font size="2"><i>Leer más...</i></font></a></p>
+                <p><a href="news.html"><font size="2"><i>Leer más...</i></font></a></p>
               </div>
 
             </div>
