--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     <main>
          <!--noticias-->
         <div class="container">
+            <center><h2>Noticias</h2></center>
             <div class="row row-cols-3">
-              <div class="col">
+                <div class="col">
                 <img src="https://i.ytimg.com/vi/eL2gxySwvZE/maxresdefault.jpg" alt="Basta!" style="width:350px;height:200px;">
                 <h3>¡Escándalo en los Oscars!</h3>
                 <p><i><font size="3">Will Smith sorprendió al mundo con un tacle que le propinó a Chris Rock en la máxima cita del cine mundial.</font></i></p>
