se agregan memes a index

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <main>
          <!--noticias-->
         <div class="container">
-            <center><h2>Noticias</h2></center>
+            <h2 class="titulo">Noticias</h2>
+            <br>
             <div class="row row-cols-3">
                 <div class="col">
                 <img src="https://i.ytimg.com/vi/eL2gxySwvZE/maxresdefault.jpg" alt="Basta!" style="width:350px;height:200px;">
@@ -67,68 +68,23 @@
         </div>
       </div> 
 
-         <!--Ultima hora-->
-        <section class="portafolio">
-            <div class="contenedor">
-                <h2 class="titulo">Ultima hora</h2>
-                <div class="galeria-port">
-                    <div class="imagen-port">
-                        <img src="img/foto 1.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="">
-                            <p>VAMOS SAPEA!!</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img src="img/foto 2.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="">
-                            <p>VAMOS SAPEA!!</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img src="img/foto 3.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="">
-                            <p>VAMOS SAPEA!!</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img src="img/foto 4.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="">
-                            <p>VAMOS SAPEA!!</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img src="img/foto 5.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="">
-                            <p>VAMOS SAPEA!!</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img src="img/foto 6.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="">
-                            <p>VAMOS SAPEA!!</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img src="img/foto 7.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="">
-                            <p>VAMOS SAPEA!!</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img src="img/foto 8.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img src="img/icono1.png" alt="">
-                            <p>VAMOS SAPEA!!</p>
-                        </div>
-                    </div>
-                </div>
+        <div class="container">
+            <h2 class="titulo">Memes</h2>
+            <br>
+            <div class="row row-cols-3">
+                <div class="col">
+                <img src="https://th.bing.com/th/id/OIP.jM0G7Y1QXsGdlyR3JAMJHgHaEK?pid=ImgDet&rs=1" alt="Basta!" style="width:350px;height:200px;">
+            </div>
+
+            <div class="col">
+                <img src="https://i.ytimg.com/vi/JnuWXktO1tA/maxresdefault.jpg" alt="You shall not pass" style="width:350px;height:200px;">
+              </div>
+              
+              <div class="col">
+                <img src="https://i.ytimg.com/vi/08fubugdgUs/maxresdefault.jpg" alt="Los expedientes secretos X" style="width:350px;height:200px;">
+              </div>
+
+            </div>
             </div>
         </section>
         <section class="about-services">
