--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Noticias</title>
+    <title>Inicio</title>
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -15,9 +15,9 @@
     <header>
         <nav>
             <a href="index.html">Inicio</a>
-            <a href="login.html">login</a>
+            <a href="login.html">Login</a>
             <a href="news.html">Noticias</a>
-            <a href="memes.html">memes</a>
+            <a href="memes.html">Memes</a>
         </nav>
         
         <section class="textos-header">
