--- a/news.html
+++ b/news.html
@@ -41,6 +41,7 @@
           
           <article>
           <div class="contenedor_articulo">
+          <p><b>8 de abril de 2022</b> | <i>Redactado por Jose "Top Gun" Bautista</i></p>
           <p>Los Angeles (Reuters) | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean laoreet, nisi at tempus vehicula, eros dui congue eros, sed pharetra sem lacus vitae mauris. Integer et dictum lacus. Donec vitae pulvinar turpis. Maecenas consectetur, nisi eu vulputate vehicula, orci lacus facilisis nunc, eget iaculis eros dolor a justo. Praesent scelerisque orci at turpis vulputate placerat. Vivamus pharetra cursus diam, nec egestas urna accumsan a. Quisque iaculis nulla vel viverra ullamcorper. Morbi sed est ut odio luctus lobortis.<br>
 
           Cras cursus sem et nunc ultricies accumsan. Sed finibus elit id odio aliquam, sit amet vestibulum turpis vulputate. Nullam dolor neque, blandit in pretium vitae, venenatis ut mauris. Nulla sed libero dolor. Mauris ullamcorper ornare tincidunt. In tempor blandit porta. Integer ut enim iaculis, vestibulum elit ut, scelerisque lectus.<br><br>
@@ -52,12 +53,13 @@
           </div>
           </article>
 
-        <center><img src="https://sm.ign.com/ign_es/screenshot/default/senori1_u4tx.jpg" alt="lotr" style="width:480px;height:300px;">
-        <h3 class="titulo_noticia">¡You shall not pass!</h3>
-        <p>A 20 años del estreno de "El señor de los anillos"</p></center><br>
+        <center><img src="https://scontent-scl2-1.xx.fbcdn.net/v/t39.30808-6/269719674_10161387024977437_8542431109997617944_n.png?_nc_cat=101&ccb=1-5&_nc_sid=e3f864&_nc_eui2=AeFyDcxzkDir_fj0qfx8-uzRN7CAcWF1QEY3sIBxYXVARolScaKD-Y58z1S1DAF6PNo5PcCoCJdPvmW3reR3-6bA&_nc_ohc=4L0qXweMONsAX8AojlN&_nc_oc=AQkxJSww31eZDMeJH6QCOLcAPAYA-tKOvN99kUeXNGmWAubn0fw_oiZmagOnbfjty0g&_nc_ht=scontent-scl2-1.xx&oh=00_AT_lFX40ADrjvImNcu5U6K3ADPqevq4uoTTHGhgbs8-gYA&oe=62566E18" alt="lotr" style="width:720px;height:300px;">
+        <h3 class="titulo_noticia">El señor de los Anillos: a 20 años de su estreno</h3>
+        <p>Salimos a investigar las claves del éxito de esta obra de arte. Aquí te lo contamos.</p></center><br>
           
         <article>
           <div class="contenedor_articulo">
+          <p><b>8 de abril de 2022</b> | <i>Redactado por Jose "Top Gun" Bautista</i></p>
           <p>Los Angeles (Reuters) | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean laoreet, nisi at tempus vehicula, eros dui congue eros, sed pharetra sem lacus vitae mauris. Integer et dictum lacus. Donec vitae pulvinar turpis. Maecenas consectetur, nisi eu vulputate vehicula, orci lacus facilisis nunc, eget iaculis eros dolor a justo. Praesent scelerisque orci at turpis vulputate placerat. Vivamus pharetra cursus diam, nec egestas urna accumsan a. Quisque iaculis nulla vel viverra ullamcorper. Morbi sed est ut odio luctus lobortis.<br>
 
           Cras cursus sem et nunc ultricies accumsan. Sed finibus elit id odio aliquam, sit amet vestibulum turpis vulputate. Nullam dolor neque, blandit in pretium vitae, venenatis ut mauris. Nulla sed libero dolor. Mauris ullamcorper ornare tincidunt. In tempor blandit porta. Integer ut enim iaculis, vestibulum elit ut, scelerisque lectus.<br><br>
