--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </nav>
         
         <section class="textos-header">
-            <h1>Noticias</h1>
-            <h2>Las noticias más frescas del séptimo arte</h2>
+            <h1>EL MULTIVERSO</h1>
+            <h2>Cine, espectáculos y memes.</h2>
         </section>             
         
         <!--color de la ola-->
