--- a/memes.html
+++ b/memes.html
@@ -7,24 +7,18 @@
         <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
         <link rel="stylesheet" href="css/estilos.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <nav>
-            <a href="index.html">Inicio</a>
-            <a href="login.html">login</a>
-            <a href="news.html">Noticias</a>
-            <a href="memes.html">memes</a>
-        </nav>
-      
-	</head>
+       	</head>
   
 	<body>
         <header>
-            <nav>
-                <a href="#">Inicio</a>
-                <a href="#">Acerca de</a>
-                <a href="#">Noticias</a>
-                <a href="#">contacto</a>
-                <a href="#">login</a>
-            </nav>
+            
+          <nav>
+            <a href="index.html">Inicio</a>
+            <a href="login.html">Login</a>
+            <a href="news.html">Noticias</a>
+            <a href="memes.html">Memes</a>
+        </nav>
+
             <section class="textos-header">
                 <h1>Memes</h1>
                 <h2>Los mejores memes jamas vistos</h2>
