--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="content-foo">
             <div class="content-foo">
                 <h4><a href="contact.html">
-                    <button type="button" class="btn btn-info">Acerca de nosotros</button></a></h4>
+                    <button type="button" class="btn btn-info">¡Contáctanos!</button></a></h4>
             </div>
         </div>
         <h2 class="titulo-final">&copy; secc: 002v </h2>
