--- a/index.html
+++ b/index.html
@@ -87,24 +87,26 @@
             </div>
             </div>
         </section>
+
+        <!---->
         <section class="about-services">
             <div class="contenedor">
-                <h2 class="titulo">Nuestros servicios</h2>
+                <h3 class="titulo">Acerca de nosotros</h2>
                 <div class="servicio-cont">
                     <div class="servicio-ind">
                         <img src="img/ilustracion1.svg" alt="">
-                        <h3>Name</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, qui?</p>
+                        <h2><center>¿Quiénes somos?</center></h2>
+                        <p>Somos tres estudiantes de Duoc con poca plata y muchas ganas de hablar de cine.</p>
                     </div>
                     <div class="servicio-ind">
                         <img src="img/ilustracion4.svg" alt="">
-                        <h3>Name</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, qui?</p>
+                        <h2><center>¿Qué hacemos?</center></h2>
+                        <p>Hablamos de cine y programamos páginas web a prueba de monos.</p>
                     </div>
                     <div class="servicio-ind">
                         <img src="img/ilustracion3.svg" alt="">
-                        <h3>Name</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, qui?</p>
+                        <h2><center>¿Qué queremos?</center></h2>
+                        <p>Hacernos de un espacio propio en la selva digital.</p>
                     </div>
                 </div>
             </div>
