--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
       <!-- Pass input -->
       <div class="form-outline mb-4" style="text-align:center">
         <input type="password" id="form2Example2" class="form-control" width=/>
-        <label class="form-label" for="form2Example2">Contrasena</label>
+        <label class="form-label" for="form2Example2">Contraseña</label>
       </div>
     
       <!-- 2 column grid layout for inline styling -->
