--- a/login.html
+++ b/login.html
@@ -41,8 +41,7 @@
           <!-- mail input -->
           <div class="form-outline mb-4" style="text-align:center">
             <label for="Correo">Correo Electronico:</label>
-            <input type="text"   id="correo"/>
-            <br /><br />
+            <input type="text"   id="correo"class="form-control" width=/>
       
             <!--input type="email" id="form2Example1" class="form-control"
             onclick="entrar(document.getElementById('correo'),value)" />
@@ -62,10 +61,10 @@
   }    
       </script>
 
-      <!-- Pass input -->
+      <!-- contrasena -->
       <div class="form-outline mb-4" style="text-align:center">
-        <input type="password" id="form2Example2" class="form-control" width=/>
         <label class="form-label" for="form2Example2">Contraseña</label>
+        <input type="password" id="password" class="form-control" width=/>
       </div>
     
       <!-- 2 column grid layout for inline styling -->
@@ -73,8 +72,8 @@
         <div class="col d-flex justify-content-center">
           <!-- Checkbox -->
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-            <label class="form-check-label" for="form2Example31">Recordar</label>
+            <!-- <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked /> -->
+            <!-- <label class="form-check-label" for="form2Example31">Recordar</label> -->
           </div>
         </div>
         <!-- <div class="col"> -->
