--- a/login.html
+++ b/login.html
@@ -54,19 +54,41 @@
       var expReg= /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/;
       var esvalido= expReg.test(correo)
     if(esvalido==true){
-      alert('el correo electronico es valido')
+      alert('Iniciado de Correo exitoso')
     }
     else{
-      alert('el correo electronico no es valido')
+      alert('Favor ingresar Correo valido')
     }
   }    
       </script>
+      
+      <!--falta arreglar-->
+      <!--script>
+        function entrar(password){
+           var expReg= /^.{4,12}$/;
+           var esvalido= expReg.test(password)
+        if(esvalido==true){
+          alert('iniciado correctamente')
+        }
+        else{
+          alert('Favor ingresar Contraseña')
+        }
 
+         } 
+      </script!-->
+
+      <!--ARREGLAR CONTRASEÑA!-->
       <!-- Pass input -->
-      <div class="form-outline mb-4" style="text-align:center">
-        <input type="password" id="form2Example2" class="form-control" width=/>
-        <label class="form-label" for="form2Example2">Contraseña</label>
-      </div>
+      <!--div class="form-outline mb-4" style="text-align:center">
+        <form action="">
+          Contraseña <input type="password" id="password">
+          <span id="mensaje"></span>
+        </form!-->
+        <div class="form-outline mb-4" style="text-align:center">
+          <label for="password">Contraseña:</label>
+          <input type="text"   id="password"/>
+          <br /><br />
+        </div>
     
       <!-- 2 column grid layout for inline styling -->
       <div class="row mb-4">
