--- a/login.html
+++ b/login.html
@@ -89,7 +89,7 @@
           <input type="text"   id="password"/>
           <br /><br />
         </div>
-=======
+
       <!-- contrasena -->
       <!--div class="form-outline mb-4" style="text-align:center">
         <label class="form-label" for="form2Example2">Contraseña</label>
@@ -101,8 +101,8 @@
         <div class="col d-flex justify-content-center">
           <!-- Checkbox -->
           <div class="form-check">
-            <!-- <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked /> -->
-            <!-- <label class="form-check-label" for="form2Example31">Recordar</label> -->
+             <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+             <label class="form-check-label" for="form2Example31">Recordar</label>
           </div>
         </div>
         <!-- <div class="col"> -->
