--- a/login.html
+++ b/login.html
@@ -86,7 +86,7 @@
         </form!-->
         <div class="form-outline mb-4" style="text-align:center">
           <label for="password">Contraseña:</label>
-          <input type="text"   id="password"/>
+          <input type="password" id="password"class="form-control" width=/>
           <br /><br />
         </div>
 
